@@ -61,4 +61,4 @@ upgrade supported from repository versions: 0 1 2 4 5
 
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
-
+> [[fixed|done]] --[[Joey]]
